# geometry-script

./: pyproject.toml
geometry_script/: __init__.py
