[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-script"
version = "0.1.0"
description = "geometry_script"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [tool.setuptools]
# packages = ["geometry_script"]

# [tool.setuptools.package-data]
# geometry_script = ["*.py"]

[tool.setuptools]
py-modules = ["geometry_script"]
